<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RecyParent"
    >


    <TextView
        android:id="@+id/tv_category_title"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:paddingStart="16dp"
        android:paddingTop="22dp"
        android:paddingBottom="21dp"
        android:text="NewsApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:background="@color/category_title"
        android:fontFamily="@font/Inter"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_first_article"
        android:layout_width="328dp"
        android:layout_height="238dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_category_title">

        <ImageView
            android:id="@+id/iv_first_apps_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tv_article_rec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/Rectangle" />

        <TextView
            android:id="@+id/tv_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/Inter"
            android:text="@string/first_article"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_first_apps_image" />

        <TextView
            android:id="@+id/tv_first_writer"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16.8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/Inter"
            android:text="@string/first_writer"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_first_article_time"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_headline" />

        <TextView
            android:id="@+id/tv_first_article_time"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/Inter"
            android:text="@string/first_article_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_first_writer"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/hour_time_process"
            android:layout_marginEnd="10dp"
            app:layout_goneMarginBottom="16.6dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_second_article"
        android:layout_width="328dp"
        android:layout_height="238dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_first_article">

        <ImageView
            android:id="@+id/iv_second_apps_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tv_article_second_rec"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/Rectangle2" />

        <TextView
            android:id="@+id/tv_second_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/Inter"
            android:text="@string/second_article"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_second_apps_image" />

        <TextView
            android:id="@+id/tv_second_writer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14.75dp"
            android:fontFamily="@font/Inter"
            android:text="@string/second_writer"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/second_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_second_headline"
            android:layout_marginBottom="17.35dp"
            />

        <TextView
            android:id="@+id/second_time"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:fontFamily="@font/Inter"
            android:text="@string/second_article_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_second_writer"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:textColor="@color/hour_time_process"
            android:includeFontPadding="false"
            app:layout_constraintRight_toRightOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_third_article"
        android:layout_width="328dp"
        android:layout_height="238dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_second_article"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        >

        <ImageView
            android:id="@+id/iv_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tv_article_third_rec"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/Rectangle3" />

        <TextView
            android:id="@+id/tv_third_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_third"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:text="@string/third_article"
            android:fontFamily="@font/Inter"
            />

        <TextView
            android:id="@+id/tv_third_writer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14.75dp"
            android:fontFamily="@font/Inter"
            android:text="@string/second_writer"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_third_article_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_third_headline"
            android:layout_marginBottom="17.35dp"
            />

        <TextView
            android:id="@+id/tv_third_article_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tv_third_writer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/third_article_time"
            android:textColor="@color/hour_time_process"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>